# TemplateCoverage

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt
.github/workflows/: build_and_test.yml  release.yml
src/: CMakeLists.txt  Collector.cpp  Collector.hpp  Reporter.cpp  Reporter.hpp  main.cpp
test/: CMakeLists.txt  Test_Collector.cpp  Test_Reporter.cpp  main.cpp
test/input/: class_method.hpp  class_scope.hpp  do_while_stmt.hpp  for_stmt.hpp  if.hpp  if_stmt.hpp  inner_class.hpp  inner_stmt.hpp  lambda.hpp  method.hpp  namespace_scope.hpp  return.hpp  return_stmt.hpp  template.hpp  template_class.hpp  template_func.hpp  template_method.hpp  while_stmt.hpp
tools/: run_on_compile_commands.py
